feat: partners und sponsoren section

--- a/index.html
+++ b/index.html
@@ -93,14 +93,36 @@
 <!-- Sponsors -->
 <section id="sponsors" class="section section-alt">
   <div class="container">
-    <h2>Sponsoren & Partner</h2>
+    <h2>Sponsoren</h2>
     <p class="muted">Danke an unsere Unterstützer:innen.</p>
     <div class="logo-grid">
-      <!-- Replace placeholder paths with your actual logos in /uploads/ -->
-      <img src="/uploads/logo_createq.png" alt="Sponsor Createq" />
-      <img src="/uploads/logo_migrosbank.png" alt="Sponsor Migros Bank" />
-      <img src="/uploads/logo_zkb.png" alt="Sponsor Zürcher Kantonalbank" />
-      <img src="/uploads/logo_ausbildung-weiterbildung.jpg" alt="Sponsor Ausbildung-weiterbildung.ch" />
+      <a href="https://www.createq.ch/" target="_blank" rel="noopener" title="Createq – Website öffnen">
+        <img src="/uploads/logo_createq.png" alt="Sponsor Createq" />
+      </a>
+      <a href="https://www.migrosbank.ch/" target="_blank" rel="noopener" title="Migros Bank – Website öffnen">
+        <img src="/uploads/logo_migrosbank.png" alt="Sponsor Migros Bank" />
+      </a>
+      <a href="https://www.zkb.ch/" target="_blank" rel="noopener" title="Zürcher Kantonalbank – Website öffnen">
+        <img src="/uploads/zkb.svg" alt="Sponsor Zürcher Kantonalbank" />
+      </a>
+      <a href="https://www.ausbildung-weiterbildung.ch/" target="_blank" rel="noopener" title="Ausbildung-weiterbildung.ch – Website öffnen">
+        <img src="/uploads/logo_ausbildung-weiterbildung.jpg" alt="Sponsor Ausbildung-weiterbildung.ch" />
+      </a>
+    </div>
+  </div>
+</section>
+
+<section id="partner" class="section section-alt">
+  <div class="container">
+    <h2>Partner</h2>
+    <p class="muted">Danke an unsere Unterstützer:innen.</p>
+    <div class="logo-grid">
+      <a href="https://www.goldwynpartners.ch/" target="_blank" rel="noopener" title="Goldwyn Partners Group AG – Website öffnen">
+        <img src="/uploads/goldwyn-partners-group-ag.png" alt="Partner Goldwyn Partners Group AG" />
+      </a>
+      <a href="https://www.proacademics.ch/" target="_blank" rel="noopener" title="Pro Academics AG – Website öffnen">
+        <img src="/uploads/pro-academics.png" alt="Partner Pro Academics AG" />
+      </a>
     </div>
   </div>
 </section>
